<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context=".MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E1A1EC">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="60dp"
            android:backgroundTint="#6371CC"
            android:onClick="goTo1"
            android:text="Go to view 1"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:backgroundTint="#6371CC"
            android:onClick="goTo2"
            android:text="Go to view 2"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@id/button3"
            app:layout_constraintTop_toTopOf="@id/button3" />

        <TableRow
            android:id="@+id/nameRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            app:layout_constraintStart_toStartOf="@id/fathersRow"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:text="@string/name"
                android:textColor="#0A15B8"
                android:textSize="20sp"></TextView>

            <EditText
                android:layout_width="274dp"
                android:hint="@string/ivan"
                android:inputType="text"
                android:singleLine="true"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#673AB7"></EditText>
        </TableRow>

        <TableRow
            android:id="@+id/surnameRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="@id/fathersRow"
            app:layout_constraintTop_toTopOf="@id/nameRow">

            <TextView
                android:text="@string/surname"
                android:textColor="#0A15B8"
                android:textSize="20sp"></TextView>

            <EditText
                android:layout_width="247dp"
                android:hint="@string/ivanov"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#673AB7"></EditText>
        </TableRow>

        <TableRow
            android:id="@+id/fathersRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="127dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="127dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/surnameRow">

            <TextView
                android:text="@string/fathers_name"
                android:textColor="#0A15B8"
                android:textSize="20sp"></TextView>

            <EditText
                android:layout_width="200dp"
                android:hint="@string/ivanovich"
                android:inputType="textShortMessage"
                android:singleLine="true"
                android:textColor="#673AB7"></EditText>
        </TableRow>

        <TableRow
            android:id="@+id/groupRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="@id/fathersRow"
            app:layout_constraintTop_toTopOf="@id/fathersRow">

            <TextView
                android:text="@string/group_number"
                android:textColor="#0A15B8"
                android:textSize="20sp"></TextView>

            <EditText
                android:layout_width="246dp"
                android:hint="@string/my_group_num"
                android:inputType="number"
                android:textColor="#673AB7"></EditText>
        </TableRow>

        <TableRow
            android:id="@+id/facultyRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="@id/fathersRow"
            app:layout_constraintTop_toTopOf="@id/groupRow">

            <TextView
                android:text="@string/faculty"
                android:textColor="#0A15B8"
                android:textSize="20sp"></TextView>

            <EditText
                android:layout_width="262dp"
                android:autofillHints=""
                android:hint="@string/fitc"
                android:inputType="textShortMessage|text"
                android:textColor="#673AB7"></EditText>
        </TableRow>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>